Storage manager: Hide "Offline files" when Google Drive volume is not mounted.

The "Google Drive" volume in Files app does not always exist.
(e.g. Guest session, Supervised user, or disabled by setting.)
Showing "Offline files" in storage manager doesn't make sense in such cases and
causes a crash.
We should hide "Offline files" item when Google Drive volume doesn't exist.

BUG=629347
TEST=manually tested on a guest user and a supervised user.
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2184083002
Cr-Commit-Position: refs/heads/master@{#408315}

Former-commit-id: ad2b1015a4d81c54dfbd79f47ca2d58fbe7722d1